syntax = "proto3";

package orders; 

option go_package = "github.com/nawafswe/orders-service/orders/proto";



message OrderedItem {
    int64 item_id = 1;
    int32 ordered_quantity = 2;
    double price = 3;
    string sku = 4;
}